// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeratorSettings has navigation options 1`] = `
Object {
  "headerBackTitle": null,
  "headerLeft": <HeaderBackButton
    buttonImage={
      Object {
        "testUri": "../../react-navigation/src/views/assets/back-icon.png",
      }
    }
    onPress={[Function]}
    pressColorAndroid="rgba(0, 0, 0, .32)"
    tintColor="#808c9b"
    truncatedTitle="Back"
  />,
  "headerStyle": Object {
    "backgroundColor": "white",
    "paddingHorizontal": 10,
  },
  "headerTintColor": "#808c9b",
  "headerTitle": "Community Moderators",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
  },
}
`;

exports[`ModeratorSettings matches the last snapshot 1`] = `
<FlatList
  ListHeaderComponent={
    <View>
      <Text>
        Community Time
      </Text>
      <View>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text>
            <Icon
              green={true}
              name="Plus"
            />
             Add New
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 10,
        "name": "John Current",
      },
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 11,
        "name": "John Other",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`ModeratorSettings renders ModeratorRow 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Avatar
    avatarUrl="http://aurl.com"
  />
  <Text>
    John Current
  </Text>
  <TouchableOpacity
    activeOpacity={0.2}
    hitSlop={
      Object {
        "bottom": 15,
        "left": 10,
        "right": 10,
        "top": 15,
      }
    }
    onPress={[Function]}
  >
    <Text>
      Remove
    </Text>
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`ModeratorSettings renders ModeratorRow without removeModerator 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Avatar
    avatarUrl="http://aurl.com"
  />
  <Text>
    John Current
  </Text>
</TouchableOpacity>
`;

exports[`ModeratorSettings shows the Search component appropriately 1`] = `
<RCTScrollView
  ListHeaderComponent={
    <View>
      <Text>
        Community Time
      </Text>
      <View>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text>
            <Icon
              green={true}
              name="Plus"
            />
             Add New
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  }
  data={
    Array [
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 10,
        "name": "John Current",
      },
      Object {
        "avatarUrl": "http://aurl.com",
        "id": 11,
        "name": "John Other",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View>
        <Text>
          Community Time
        </Text>
        <View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              <Icon
                green={true}
                name="Plus"
              />
               Add New
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View>
          <Image
            source={
              Object {
                "uri": "http://aurl.com",
              }
            }
          />
        </View>
        <Text>
          John Current
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View>
          <Image
            source={
              Object {
                "uri": "http://aurl.com",
              }
            }
          />
        </View>
        <Text>
          John Other
        </Text>
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 10,
              "right": 10,
              "top": 15,
            }
          }
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text>
            Remove
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
